[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/PlayerSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/Payer/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/sounds/Jump.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.5, 48 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 0.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 7, -10 )
scale = Vector2( 0.194506, 0.194506 )
frames = ExtResource( 1 )
animation = "boire"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8.5, -10 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 26, 40 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2( -9, 40 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="soundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="move" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="move" to="." method="_on_move_timeout"]
